<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>fr.maxlego08.stats</groupId>
    <artifactId>zAuctionHouseStats</artifactId>
    <version>1.0.2</version>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>
    <build>
        <sourceDirectory>src</sourceDirectory>
        <resources>
            <resource>
                <directory>src/main/resources/</directory>
                <filtering>true</filtering>
                <includes>
                    <include>*.yml</include>
                </includes>
            </resource>
            <resource>
                <directory>src/main/resources/</directory>
                <filtering>true</filtering>
                <includes>
                    <include>**/*</include>
                </includes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.4.1</version>
                <configuration>
                    <filters>
                        <filter>
                            <artifact>*:*</artifact>
                            <excludes>
                                <exclude>com/cryptomorin/xseries/messages/*</exclude>
                                <exclude>com/cryptomorin/xseries/particles/*</exclude>
                                <exclude>com/cryptomorin/xseries/XBiome*</exclude>
                                <exclude>com/cryptomorin/xseries/NMSExtras*</exclude>
                                <exclude>com/cryptomorin/xseries/NoteBlockMusic*</exclude>
                                <exclude>com/cryptomorin/xseries/SkullCacheListener*</exclude>
                                <exclude>com/cryptomorin/xseries/NoteBlockMusic*</exclude>
                                <exclude>com/cryptomorin/xseries/XTag*</exclude>
                                <exclude>com/cryptomorin/xseries/XPotion*</exclude>
                                <exclude>com/cryptomorin/xseries/XMaterial*</exclude>
                                <exclude>com/cryptomorin/xseries/XItemStack*</exclude>
                                <exclude>com/cryptomorin/xseries/XBlock*</exclude>
                                <exclude>com/cryptomorin/xseries/XEntity*</exclude>
                                <exclude>com/cryptomorin/xseries/XEnchantment*</exclude>
                                <exclude>com/cryptomorin/xseries/SkullUtils*</exclude>
                                <exclude>com/cryptomorin/xseries/ReflectionUtils*</exclude>
                            </excludes>
                        </filter>
                    </filters>
                    <relocations>
                        <!-- Relocate your package to avoid conflicts -->
                        <relocation>
                            <pattern>fr.maxlego08.sarah</pattern>
                            <shadedPattern>fr.maxlego08.stats.zcore.utils.sarah</shadedPattern>
                        </relocation>
                    </relocations>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>placeholderapi</id>
            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
        </repository>
        <repository>
            <id>minecraft-repo</id>
            <url>https://libraries.minecraft.net/</url>
        </repository>
        <repository>
            <id>papermc</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
    </repositories>
    <dependencies>
        <dependency>
            <groupId>com.github.Maxlego08</groupId>
            <artifactId>zTranslator</artifactId>
            <version>1.0.0.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>dev.folia</groupId>
            <artifactId>folia-api</artifactId>
            <version>1.19.4-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>2.11.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.mojang</groupId>
            <artifactId>authlib</artifactId>
            <version>3.11.50</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.cryptomorin</groupId>
            <artifactId>XSeries</artifactId>
            <version>9.4.0</version>
        </dependency>
        <dependency>
            <groupId>com.github.Maxlego08</groupId>
            <artifactId>zAuctionHouseV3-API</artifactId>
            <version>3.2.1.2</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/zAuctionHouse-3.2.1.4.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.github.Maxlego08</groupId>
            <artifactId>zMenu-API</artifactId>
            <version>1.0.2.7</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.Maxlego08</groupId>
            <artifactId>Sarah</artifactId>
            <version>32ccc7ae52</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>
</project>